# microhash

./: .rustfmt.toml  Cargo.toml  README.md
benches/: bench.rs
src/: hash.rs  lib.rs  util.rs
src/hash/: ahash.rs  identity.rs
tests/: tests.rs
