[package]
name = "microhash"
description = "Collection of hash implementations"
version = "0.0.1"
authors = ["Christian Sdunek <me@systemcluster.me>"]
license = "BSD-2-Clause"
repository = "https://github.com/Systemcluster/microhash"
readme = "README.md"
edition = "2021"
resolver = "2"
publish = false

[lib]
name = "microhash"
path = "src/lib.rs"

[features]
default = ["std"]
std = []

[dependencies]
byteorder = { version = "1" }
const-random = { version = "0.1" }

[dev-dependencies]
ahash = { version = "0.8" }
xxhash-rust = { version = "0.8", features = ["xxh3", "const_xxh3"] }
